# spotsummary

./: .gitignore  README.md  pyproject.toml
SpotSummary/: ContentView.swift  Info.plist  MapView.swift  SpotSummaryApp.swift
SpotSummary.xcodeproj/: project.pbxproj
SpotSummary.xcodeproj/xcuserdata/lrios.xcuserdatad/xcschemes/: xcschememanagement.plist
SpotSummaryTests/: SpotSummaryTests.swift
SpotSummaryUITests/: SpotSummaryUITests.swift  SpotSummaryUITestsLaunchTests.swift
api/: __init__.py  app.py  embeddings.py  example_response.json  maps.py  pyvenv.cfg  requirements.txt
nextapp/: next.config.js  package-lock.json  package.json
nextapp/src/app/: layout.tsx  page.tsx  test.tsx
nextapp/src/app/components/: AddressInput.tsx  Map.tsx  Search.tsx
nextapp/src/app/home/: page.tsx
nextapp/src/app/posts/: page.js
