[tool.poetry]
name = "api"
version = "0.1.0"
description = "store, retrieve, summarize reviews"
authors = ["Luis Niebla <lrios@repay.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "api:run"